Use the event targe as the scope when wrapping event handler args so that the event handler can access them.  Bug 342235, r=mhammond, sr=jst